# jidoushiwake

./: README.md  jidoushiwake_scanner_pdf.py  pyproject.toml  requirements.txt  run_ui.py
data/: app.db
src/jidoushiwake/: __init__.py  config.py  db.py  llm_client.py  models.py  ocr_extract.py  ocr_master.py  scansnap_control.py  services.py  yayoi_exporter.py
src/jidoushiwake/api/: app.py
src/jidoushiwake/frontend/: admin.py  app.py
tests/: test_yayoi_exporter.py
